# AEDS2

./: .gitignore
aula4/ex1/: ContaBancaria.c  ContaBancaria.h  Main.c
aula4/ex2/: ContaBancaria.c  ContaBancaria.h  Contas.c  Contas.h  Main.c
aula4/ex3/: Complexo.c  Complexo.h  Main.c
lista1/: ex1.c  ex2.c  ex2.md  ex3.c  ex3.md  exes.md
tp0/: .gitignore  Arquivo.c  Arquivo.h  CMakeLists.txt  Filme.c  Filme.h  Lista.c  Lista.h  Main.c  Nodo.c  Nodo.h  Sugestoes.c  Sugestoes.h  Usuarios.c  Usuarios.h  build.bat  makefile
tp0/src/: Arquivo.c  Arquivo.h  CMakeLists.txt  Filme.c  Filme.h  Lista.h  Main.c  Sugestoes.c  Sugestoes.h  Usuario.c  Usuario.h
tp1/: .gitignore  README.md
tp1/src/: CMakeLists.txt  Ldenc.c  Ldenc.h  Ndenc.c  Ndenc.h  main.c  teste1.c  valloc.c  valloc.h
tp2/: .gitignore  CMakeLists.txt  README.md
tp2/bases/: 2109_users_500_items_ratingsN.txt  50_users_100_items_ratingsN.txt  5_users_10_items_ratingsN.txt  5_users_5_items_ratingsN.txt
tp2/coeficientes/: 1.jacc.txt  2.jacc.txt  3.jacc.txt  4.jacc.txt  5.jacc.txt
tp2/src/: ABBusca_m.c  ABBusca_m.h  ABNodo.c  ABNodo.h  Arquivo.c  Arquivo.h  BitString.c  BitString.h  CMakeLists.txt  Filme.c  Filme.h  HashTable_ABB.c  HashTable_ABB.h  Individual.c  Ldenc.c  Ldenc.h  Lista.c  Lista.h  Main.c  Ndenc.c  Ndenc.h  Nodo.c  Nodo.h  Populares.c  Racional.c  Racional.h  Sort.c  Sort.h  Sugestoes.c  Sugestoes.h  Sugestoes_Impressao.c  Sugestoes_Impressao.h  Sugestoes_Impressao_IDs.c  Sugestoes_Impressao_IDs.h  Usuario.c  Usuario.h
tp2/webapp/: config.py  requirements.txt  run.py
tp2/webapp/geradores/: config.ini
tp2/webapp/webapp/: __init__.py  views.py
tp2/webapp/webapp/static/: form.js  home.js  style.css  sugestoes.js
tp2/webapp/webapp/sugestoes/: engine.py  (+1 more)
tp2d/: .gitignore
tp2d/webapp/: config.py  run.py
tp2d/webapp/webapp/: __init__.py  forms.py  views.py
(+15 files in other folders)
